--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
@@ -11,8 +11,10 @@ browse-all=استعراض الكل
 change-image=تغيير الصورة (Automatic Translation)
 changes-saved-at-x=يتم حفظ التغييرات في {0}.
 changes-to-experiences-are-applied-immediately=يتم تطبيق التغييرات على التجارب فوريًا.
+comments-enabled=تمكين التعليقات (Automatic Translation)
+comments-enabled-description=قم بتعيين هذا إلى true لتمكين التعليقات أثناء إصدار صفحة المحتوى. (Automatic Translation)
 container=الحاوية
-content-page-editor-comments-configuration-name=تعليقات محرر صفحة المحتوى (Automatic Translation)
+content-page-editor-configuration-name=محرر صفحة المحتوى (Automatic Translation)
 content-type=نوع المحتوى
 delete-experience=حذف الخبرة
 deprioritize-experience=خفض أولوية الخبرة
@@ -55,7 +57,7 @@ prioritize-experience=تحديد أولوية الخبرة
 publish-page=نشر الصفحة
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=تقليل عدد الأعمدة سيؤدي إلى فقدان المحتوى المضاف إلى الأعمدة المحذوفة. هل أنت متأكد من أنك تريد المتابعة؟
 remove-background=إزالة الخلفية
-reopen=Reopen (Automatic Copy)
+reopen=فتح (Automatic Translation)
 restore-values=استعادة القيم
 saved=محفوظ
 saving-changes=جار حفظ التغييرات...
@@ -70,7 +72,7 @@ select-image=تحديد صورة
 select-the-content-source-for-this-display-page-template=حدد مصدر المحتوى لقالب صفحة العرض هذه.
 self=ذاتي
 show-editable-areas=إظهار المناطق القابلة للتحرير
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=إظهار التعليقات التي تم حلها (Automatic Translation)
 space-between-columns=مسافة بين الأعمدة
 specific-content=محتوى خاص
 text-alignment=محاذاة النص
