--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
@@ -11,8 +11,10 @@ browse-all=Преглед на всички (Automatic Translation)
 change-image=Промяна на изображението (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Промените в преживяванията се прилагат незабавно. (Automatic Translation)
+comments-enabled=Коментарите са разрешени (Automatic Translation)
+comments-enabled-description=Задайте това вярно, за да разрешите коментарите по време на изданието на страницата със съдържание. (Automatic Translation)
 container=Контейнер (Automatic Translation)
-content-page-editor-comments-configuration-name=Коментари за редактора на страници със съдържание (Automatic Translation)
+content-page-editor-configuration-name=Редактор на страници със съдържание (Automatic Translation)
 content-type=Тип съдържание (Automatic Translation)
 delete-experience=Изтриване на опит (Automatic Translation)
 deprioritize-experience=Деприоритизирайте опита (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=Приоритизирайте опита (Automatic Trans
 publish-page=Публикуване на страница (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Намаляване на броя на колоните ще загубят съдържание, добавени в изтрити колони. Наистина ли искате да продължите? (Automatic Translation)
 remove-background=Премахни фона (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Reopen (Automatic Translation)
 restore-values=Възстановяване на стойности (Automatic Translation)
 saved=Записани (Automatic Translation)
 saving-changes=Записване на промени... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=Изберете изображение (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Изберете източника на съдържание за този шаблон на показвана страница. (Automatic Translation)
 self=Самостоятелно (Automatic Translation)
 show-editable-areas=Показване на редактируеми области (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Показване на разрешени коментари (Automatic Translation)
 space-between-columns=Разстояние между колоните (Automatic Translation)
 specific-content=Специфично съдържание (Automatic Translation)
 text-alignment=Подравняване на текст (Automatic Translation)
