--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_cs.properties
@@ -11,8 +11,10 @@ browse-all=Procházet vše (Automatic Translation)
 change-image=Změnit obrázek (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Změny zkušeností se uplatňují okamžitě. (Automatic Translation)
+comments-enabled=Komentáře povoleny (Automatic Translation)
+comments-enabled-description=Nastavte tuto hodnotu na true, chcete-li povolit poznámky během edice stránky obsahu. (Automatic Translation)
 container=Kontejner (Automatic Translation)
-content-page-editor-comments-configuration-name=Komentáře k editoru stránek obsahu (Automatic Translation)
+content-page-editor-configuration-name=Editor stránek obsahu (Automatic Translation)
 content-type=Typ obsahu (Automatic Translation)
 delete-experience=Odstranit zkušenosti (Automatic Translation)
 deprioritize-experience=Snížit prioritu zkušeností (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=Určit prioritu zkušeností (Automatic Translation)
 publish-page=Publikování stránky (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Snížení počtu sloupců ztratí obsah přidaný do odstraněné sloupce. Opravdu že chcete pokračovat? (Automatic Translation)
 remove-background=Odebrat pozadí (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Znovu (Automatic Translation)
 restore-values=Obnovit hodnoty (Automatic Translation)
 saved=Uloženo v (Automatic Translation)
 saving-changes=Ukládání změn... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=Vybrat obrázek (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Vyberte zdroj obsahu pro tuto šablonu stránky zobrazení. (Automatic Translation)
 self=Já (Automatic Translation)
 show-editable-areas=Zobrazit upravitelných oblastí (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Zobrazit vyřešené komentáře (Automatic Translation)
 space-between-columns=Mezera mezi sloupci (Automatic Translation)
 specific-content=Specifický obsah (Automatic Translation)
 text-alignment=Zarovnání textu (Automatic Translation)
