--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_de.properties
@@ -11,8 +11,10 @@ browse-all=Alle durchsuchen
 change-image=Change Image (Automatic Copy)
 changes-saved-at-x=Änderungen gespeichert um {0}.
 changes-to-experiences-are-applied-immediately=Änderungen an den Erfahrungswerten werden sofort umgesetzt.
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=Container
-content-page-editor-comments-configuration-name=Kommentare aus dem Editor der Inhaltsseite
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-type=Content-Type
 delete-experience=Erlebnis löschen
 deprioritize-experience=Erlebnis depriorisieren
