--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
@@ -11,8 +11,10 @@ browse-all=Αναζήτηση όλων (Automatic Translation)
 change-image=Αλλαγή εικόνας (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Οι αλλαγές στις εμπειρίες εφαρμόζονται αμέσως. (Automatic Translation)
+comments-enabled=Ενεργοποιημένα σχόλια (Automatic Translation)
+comments-enabled-description=Ορίστε την τιμή TRUE για να ενεργοποιήσετε τα σχόλια κατά την έκδοση σελίδας περιεχομένου. (Automatic Translation)
 container=Κοντέινερ (Automatic Translation)
-content-page-editor-comments-configuration-name=Σχόλια για το πρόγραμμα επεξεργασίας σελίδας περιεχομένου (Automatic Translation)
+content-page-editor-configuration-name=Πρόγραμμα επεξεργασίας σελίδας περιεχομένου (Automatic Translation)
 content-type=Τύπος περιεχομένου (Automatic Translation)
 delete-experience=Διαγραφή εμπειρίας (Automatic Translation)
 deprioritize-experience=Στέρηση εμπειρίας (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=Προτεραιότητα εμπειρίας (Automatic T
 publish-page=Δημοσίευση σελίδας (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Μείωση του αριθμού των στηλών θα χάσετε περιεχομένου που προστίθενται στις στήλες διαγράφεται. Είστε βέβαιοι ότι θέλετε να συνεχίσετε; (Automatic Translation)
 remove-background=Κατάργηση φόντου (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Ανοίξετε ξανά (Automatic Translation)
 restore-values=Επαναφορά τιμών (Automatic Translation)
 saved=Αποθηκεύτηκε σε (Automatic Translation)
 saving-changes=Αποθήκευση των αλλαγών... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=Επιλέξτε εικόνα (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Επιλέξτε την προέλευση περιεχομένου για αυτό το πρότυπο σελίδας εμφάνισης. (Automatic Translation)
 self=Αυτο (Automatic Translation)
 show-editable-areas=Εμφάνιση επεξεργάσιμων περιοχών (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Εμφάνιση σχολίων που έχουν επιλυθεί (Automatic Translation)
 space-between-columns=Διάστημα μεταξύ των στηλών (Automatic Translation)
 specific-content=Συγκεκριμένο περιεχόμενο (Automatic Translation)
 text-alignment=Στοίχιση κειμένου (Automatic Translation)
