--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
@@ -11,8 +11,10 @@ browse-all=Explorar todo
 change-image=Cambiar imagen (Automatic Translation)
 changes-saved-at-x=Cambios guardados a las {0}.
 changes-to-experiences-are-applied-immediately=Los cambios realizados en las experiencias se aplican de inmediato.
+comments-enabled=Comentarios habilitados (Automatic Translation)
+comments-enabled-description=Establezca esta opción en true para habilitar los comentarios durante la edición de la página de contenido. (Automatic Translation)
 container=Contenedor
-content-page-editor-comments-configuration-name=Comentarios del editor de páginas de contenido
+content-page-editor-configuration-name=Editor de páginas de contenido (Automatic Translation)
 content-type=Tipo de contenido
 delete-experience=Eliminar experiencia
 deprioritize-experience=Reducir prioridad de experiencia
@@ -55,7 +57,7 @@ prioritize-experience=Aumentar prioridad de experiencia
 publish-page=Publicar página
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Al reducir el número de columnas, se perderá el contenido añadido a las columnas eliminadas. ¿Está seguro de que quiere continuar?
 remove-background=Quitar fondo
-reopen=Reopen (Automatic Copy)
+reopen=Reabrir (Automatic Translation)
 restore-values=Restaurar valores
 saved=Guardado
 saving-changes=Guardando cambios…
@@ -70,7 +72,7 @@ select-image=Seleccionar imagen
 select-the-content-source-for-this-display-page-template=Seleccione el origen de contenido para esta plantilla de página de visualización.
 self=Auto
 show-editable-areas=Mostrar áreas editables
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Mostrar comentarios resueltos (Automatic Translation)
 space-between-columns=Espacio entre columnas
 specific-content=Contenido específico
 text-alignment=Alineación del texto
