--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
@@ -11,8 +11,10 @@ browse-all=Sirvi kõiki (Automatic Translation)
 change-image=Muuda pilti (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Kogemuste muudatusi rakendatakse kohe. (Automatic Translation)
+comments-enabled=Kommentaarid on lubatud (Automatic Translation)
+comments-enabled-description=Seadke see tõene, et lubada kommentaare sisu leheväljaande ajal. (Automatic Translation)
 container=Konteiner (Automatic Translation)
-content-page-editor-comments-configuration-name=Sisulehekülje redaktori kommentaarid (Automatic Translation)
+content-page-editor-configuration-name=Sisulehekülje redaktor (Automatic Translation)
 content-type=Sisu tüüp (Automatic Translation)
 delete-experience=Kustuta kogemus (Automatic Translation)
 deprioritize-experience=Deprioritize kogemus (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=Tähtsusjärjesta kogemus (Automatic Translation)
 publish-page=Lehe avaldamine (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Veergude arvu ise sisu on kustutatud veerud. Kas soovite kindlasti jätkata? (Automatic Translation)
 remove-background=Eemalda taust (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Avage (Automatic Translation)
 restore-values=Taasta väärtused (Automatic Translation)
 saved=Salvestatud (Automatic Translation)
 saving-changes=Muudatused... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=Valige pilt (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Saate valida kuvatava lehemalli sisuallika. (Automatic Translation)
 self=Ise (Automatic Translation)
 show-editable-areas=Näita muudetav piirkondades (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Kuva lahendatud kommentaarid (Automatic Translation)
 space-between-columns=Vahe veergude vahel (Automatic Translation)
 specific-content=Konkreetne sisu (Automatic Translation)
 text-alignment=Teksti joondamine (Automatic Translation)
