--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fi.properties
@@ -11,8 +11,10 @@ browse-all=Selaa Kaikkia
 change-image=Change Image (Automatic Copy)
 changes-saved-at-x=Muutokset tallennettu paikkaan {0}.
 changes-to-experiences-are-applied-immediately=Muutokset kokemuksiin tulevat voimaan välittömästi.
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=Kansio
-content-page-editor-comments-configuration-name=Sisältösivueditorin Kommentit
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-type=Sisällön tyyppi
 delete-experience=Poista Kokemus
 deprioritize-experience=Poista Kokemuksen Priorisointi
