--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
@@ -11,8 +11,10 @@ browse-all=Összes böngészése
 change-image=Képváltás (Automatic Translation)
 changes-saved-at-x=A változtatások elmentve: {0}.
 changes-to-experiences-are-applied-immediately=Az élmény változásai azonnal érvényesülnek.
+comments-enabled=Kommentek engedélyezve (Automatic Translation)
+comments-enabled-description=Ha a tartalomlap-kiadás alatt szeretné engedélyezni a megjegyzéseket, állítsa be ezt a True értékre. (Automatic Translation)
 container=Konténer
-content-page-editor-comments-configuration-name=Tartalom oldal szerkesztő hozzászólásai
+content-page-editor-configuration-name=Tartalomlap-szerkesztő (Automatic Translation)
 content-type=Tartalom típusa
 delete-experience=Élmény törlése
 deprioritize-experience=Élmény prioritásának törlése
@@ -55,7 +57,7 @@ prioritize-experience=Élmény prioritása magas
 publish-page=Oldal közzététele
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Az oszlopok számának csökkentése a törölt oszlopok tartalmának elvesztésével jár. Kívánja folytatni?
 remove-background=Háttér eltávolítása
-reopen=Reopen (Automatic Copy)
+reopen=Újra kinyit (Automatic Translation)
 restore-values=Értékek visszaállítása
 saved=Mentve
 saving-changes=Módosítások mentése...
@@ -70,7 +72,7 @@ select-image=Kép kiválasztása
 select-the-content-source-for-this-display-page-template=Válasszon tartalomforrást a megjelenítési-oldal sablonhoz.
 self=Önálló
 show-editable-areas=Szerkeszthető területek megjelenítése
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Feloldott megjegyzések megjelenítése (Automatic Translation)
 space-between-columns=Oszlopok közötti hely
 specific-content=Specifikus tartalom
 text-alignment=Szöveg igazítása
