--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ja.properties
@@ -11,8 +11,10 @@ browse-all=すべて閲覧する
 change-image=Change Image (Automatic Copy)
 changes-saved-at-x={0} に変更を保存
 changes-to-experiences-are-applied-immediately=エクスペリエンスへの変更は即座に適用されます。
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=コンテナ
-content-page-editor-comments-configuration-name=コンテンツページエディタのコメント
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-type=コンテンツの種類
 delete-experience=エクスペリエンスを削除
 deprioritize-experience=エクスペリエンスの優先度を下げる
