--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
@@ -11,8 +11,10 @@ browse-all=Peržiūrėti viską (Automatic Translation)
 change-image=Keisti atvaizdą (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Patirties pakeitimai taikomi nedelsiant. (Automatic Translation)
+comments-enabled=Įgalintos pastabos (Automatic Translation)
+comments-enabled-description=Nustatykite, kad tai būtų teisinga, jei norite įgalinti komentarus turinio puslapio leidime. (Automatic Translation)
 container=Konteineris (Automatic Translation)
-content-page-editor-comments-configuration-name=Turinio puslapio rengyklės komentarai (Automatic Translation)
+content-page-editor-configuration-name=Turinio puslapio rengyklė (Automatic Translation)
 content-type=Turinio tipas (Automatic Translation)
 delete-experience=Naikinti patirtį (Automatic Translation)
 deprioritize-experience=Deprioritize patirtis (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=Pirmenybė patirčiai (Automatic Translation)
 publish-page=Skelbti puslapis (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Stulpelių skaičiaus mažinimas bus prarasti pridėti prie panaikintų stulpelių turinys. Ar tikrai norite tęsti? (Automatic Translation)
 remove-background=Pašalinti foną (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Atnaujinti (Automatic Translation)
 restore-values=Atkurti reikšmes (Automatic Translation)
 saved=Išsaugota (Automatic Translation)
 saving-changes=Išsaugoti pakeitimus... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=Pasirinkite vaizdą (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Pasirinkite šio rodymo puslapio šablono turinio šaltinį. (Automatic Translation)
 self=Savarankiškai (Automatic Translation)
 show-editable-areas=Rodyti redaguojamas sritis (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Rodyti išspręstus komentarus (Automatic Translation)
 space-between-columns=Atstumas tarp stulpelių (Automatic Translation)
 specific-content=Konkretus turinys (Automatic Translation)
 text-alignment=Teksto lygiuotė (Automatic Translation)
