--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
@@ -11,8 +11,10 @@ browse-all=Alles doorbladeren
 change-image=Change Image (Automatic Copy)
 changes-saved-at-x=Wijzigingen opgeslagen op {0}.
 changes-to-experiences-are-applied-immediately=Wijzigingen aan ervaringen worden onmiddellijk toegepast.
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=Houder
-content-page-editor-comments-configuration-name=Opmerkingen van de editor van de pagina-inhoud
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-type=Inhoudstype
 delete-experience=Ervaring verwijderen
 deprioritize-experience=Prioriteit ervaring verwijderen
