--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
@@ -11,8 +11,10 @@ browse-all=Przeglądaj wszystkie (Automatic Translation)
 change-image=Zmień obraz (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Zmiany w doświadczeniach są stosowane natychmiast. (Automatic Translation)
+comments-enabled=Komentarze włączone (Automatic Translation)
+comments-enabled-description=Ustaw tę wartość na true, aby włączyć Komentarze podczas edycji strony zawartości. (Automatic Translation)
 container=Kontener (Automatic Translation)
-content-page-editor-comments-configuration-name=Komentarze edytora strony zawartości (Automatic Translation)
+content-page-editor-configuration-name=Edytor stron zawartości (Automatic Translation)
 content-type=Typ zawartości (Automatic Translation)
 delete-experience=Usuń doświadczenie (Automatic Translation)
 deprioritize-experience=Depriorytetyzacja doświadczenia (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=Priorytetyzacja doświadczenia (Automatic Translation)
 publish-page=Opublikować stronę (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Zmniejszenie liczby kolumn spowoduje utratę treści dodawane do kolumny usunięte. Czy na pewno chcesz kontynuować? (Automatic Translation)
 remove-background=Usuń tło (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Ponownie (Automatic Translation)
 restore-values=Przywróć wartości (Automatic Translation)
 saved=Zapisano na (Automatic Translation)
 saving-changes=Zapisywanie zmian... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=Wybierz obraz (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Wybierz źródło zawartości dla tego szablonu strony wyświetlanej. (Automatic Translation)
 self=Siebie (Automatic Translation)
 show-editable-areas=Pokaż obszary edytowalne (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Pokaż rozwiązane Komentarze (Automatic Translation)
 space-between-columns=Odstęp między kolumnami (Automatic Translation)
 specific-content=Konkretna treść (Automatic Translation)
 text-alignment=Wyrównanie tekstu (Automatic Translation)
