--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
@@ -11,8 +11,10 @@ browse-all=Procurar tudo
 change-image=Alterar imagem (Automatic Translation)
 changes-saved-at-x=Alteração salva em {0}.
 changes-to-experiences-are-applied-immediately=Modificações nas experiências são aplicadas imediatamente.
+comments-enabled=Comentários ativados (Automatic Translation)
+comments-enabled-description=Defina isso como true para habilitar comentários durante a edição de página de conteúdo. (Automatic Translation)
 container=Contêiner
-content-page-editor-comments-configuration-name=Comentários do Editor da Página de Conteúdo
+content-page-editor-configuration-name=Editor de páginas de conteúdo (Automatic Translation)
 content-type=Tipo de conteúdo
 delete-experience=Excluir experiência
 deprioritize-experience=Anular prioridade da experiência
@@ -55,7 +57,7 @@ prioritize-experience=Priorizar experiência
 publish-page=Publicar página
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Reduzir o número de colunas fará com que o conteúdo adicionado nas colunas excluídas seja perdido. Tem certeza que deseja continuar?
 remove-background=Remover Plano de Fundo
-reopen=Reopen (Automatic Copy)
+reopen=Reabrir (Automatic Translation)
 restore-values=Restaurar valores
 saved=Salvo
 saving-changes=Salvando alterações...
@@ -70,7 +72,7 @@ select-image=Selecionar imagem
 select-the-content-source-for-this-display-page-template=Selecione a fonte do conteúdo para este modelo de página de exibição.
 self=Auto
 show-editable-areas=Mostrar áreas editáveis
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Mostrar comentários resolvidos (Automatic Translation)
 space-between-columns=Espaço entre colunas
 specific-content=Conteúdo específico
 text-alignment=Alinhamento de texto
