--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_PT.properties
@@ -10,9 +10,11 @@ background-image=Background Image (Automatic Copy)
 browse-all=Browse All (Automatic Copy)
 change-image=Alterar imagem (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
-changes-to-experiences-are-applied-immediately=As alterações às experiências são aplicadas imediatamente. (Automatic Translation)
+changes-to-experiences-are-applied-immediately=Changes to experiences are applied immediately. (Automatic Copy)
+comments-enabled=Comments Enabled (Automatic Copy)
+comments-enabled-description=Set this to true to enable comments during content page edition. (Automatic Copy)
 container=Container (Automatic Copy)
-content-page-editor-comments-configuration-name=Content Page Editor Comments (Automatic Copy)
+content-page-editor-configuration-name=Content Page Editor (Automatic Copy)
 content-type=Content Type (Automatic Copy)
 delete-experience=Delete Experience (Automatic Copy)
 deprioritize-experience=Deprioritize Experience (Automatic Copy)
