--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
@@ -11,8 +11,10 @@ browse-all=Răsfoire toate (Automatic Translation)
 change-image=Modificare imagine (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Modificările aduse experiențelor sunt aplicate imediat. (Automatic Translation)
+comments-enabled=Comentarii activate (Automatic Translation)
+comments-enabled-description=Setați acest lucru la True pentru a activa comentariile în timpul ediției paginii de conținut. (Automatic Translation)
 container=Container (Automatic Translation)
-content-page-editor-comments-configuration-name=Comentarii editor de pagini de conținut (Automatic Translation)
+content-page-editor-configuration-name=Editor de pagini de conținut (Automatic Translation)
 content-type=Tip de conținut (Automatic Translation)
 delete-experience=Ștergere experiență (Automatic Translation)
 deprioritize-experience=Deprioritizarea experienței (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=Prioritizați experiența (Automatic Translation)
 publish-page=Publicaţi pagina (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Reducerea numărului de coloane va pierde conţinutul adăugat la coloanele şterse. Sunteţi sigur că doriţi să continuaţi? (Automatic Translation)
 remove-background=Eliminare fundal (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Redeschideți (Automatic Translation)
 restore-values=Restabilire valori (Automatic Translation)
 saved=Salvate (Automatic Translation)
 saving-changes=Salvarea modificărilor... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=Selectaþi imagine (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Selectați sursa de conținut pentru acest șablon de pagină de afișare. (Automatic Translation)
 self=Auto (Automatic Translation)
 show-editable-areas=Arată zone editabile (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Afișare comentarii rezolvate (Automatic Translation)
 space-between-columns=Spaţiu între coloane (Automatic Translation)
 specific-content=Continut specific (Automatic Translation)
 text-alignment=Aliniere text (Automatic Translation)
