--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
@@ -10,9 +10,11 @@ background-image=Фоновое изображение (Automatic Translation)
 browse-all=Просмотреть все (Automatic Translation)
 change-image=Изменение изображения (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
-changes-to-experiences-are-applied-immediately=Изменения к опыту применяются немедленно. (Automatic Translation)
+changes-to-experiences-are-applied-immediately=Изменения в опыте применяются немедленно. (Automatic Translation)
+comments-enabled=Комментарии включены (Automatic Translation)
+comments-enabled-description=Установите это до истины, чтобы включить комментарии во время издания страницы содержимого. (Automatic Translation)
 container=Контейнер (Automatic Translation)
-content-page-editor-comments-configuration-name=Комментарии редактора страницы контента (Automatic Translation)
+content-page-editor-configuration-name=Редактор страницы содержимого (Automatic Translation)
 content-type=Тип содержимого (Automatic Translation)
 delete-experience=Удалить опыт (Automatic Translation)
 deprioritize-experience=Деприоритизе опыт (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=Приоритетность опыта (Automatic Transla
 publish-page=Страница публикации (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Сокращение числа столбцов потеряет содержимое, добавленное на удаленные столбцы. Вы уверены, что вы хотите продолжить? (Automatic Translation)
 remove-background=Удаление фона (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Открыть (Automatic Translation)
 restore-values=Восстановление значений (Automatic Translation)
 saved=Сохраненные (Automatic Translation)
 saving-changes=Сохранение изменений... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=Выбрать изображение (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Выберите источник содержимого для шаблона страницы отображения. (Automatic Translation)
 self=Самоуправления (Automatic Translation)
 show-editable-areas=Показать редактируемых областей (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Показать разрешенные комментарии (Automatic Translation)
 space-between-columns=Расстояние между столбцами (Automatic Translation)
 specific-content=Конкретный контент (Automatic Translation)
 text-alignment=Выравнивание текста (Automatic Translation)
