--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sk.properties
@@ -11,8 +11,10 @@ browse-all=Prehľadávať všetky (Automatic Translation)
 change-image=Zmeniť obrázok (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Zmeny v skúsenostiach sa uplatňujú okamžite. (Automatic Translation)
+comments-enabled=Komentáre povolené (Automatic Translation)
+comments-enabled-description=Nastavte to pravda, aby ste mohli komentáre počas vydania obsahu stránky. (Automatic Translation)
 container=Kontajner (Automatic Translation)
-content-page-editor-comments-configuration-name=Obsah editor stránky komentáre (Automatic Translation)
+content-page-editor-configuration-name=Editor stránok obsahu (Automatic Translation)
 content-type=Typ obsahu (Automatic Translation)
 delete-experience=Odstrániť skúsenosti (Automatic Translation)
 deprioritize-experience=Depriorovať skúsenosti (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=Uprednostňovať skúsenosti (Automatic Translation)
 publish-page=Publikovanie stránky (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Zníženie počtu stĺpcov stratia obsah pridaný v odstránených stĺpcoch. Naozaj chcete pokračovať? (Automatic Translation)
 remove-background=Odstrániť pozadie (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Znovu otvoriť (Automatic Translation)
 restore-values=Obnoviť hodnoty (Automatic Translation)
 saved=Uložené (Automatic Translation)
 saving-changes=Uloženie zmien... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=Vybrať obrázok (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Vyberte zdroj obsahu pre túto šablónu zobrazovaného stránky. (Automatic Translation)
 self=Samostatne (Automatic Translation)
 show-editable-areas=Zobraziť upraviteľných oblastí (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Zobraziť Vyriešené Komentáre (Automatic Translation)
 space-between-columns=Medzera medzi stĺpcami (Automatic Translation)
 specific-content=Špecifický obsah (Automatic Translation)
 text-alignment=Zarovnanie textu (Automatic Translation)
