--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
@@ -11,8 +11,10 @@ browse-all=Brskanje po vseh (Automatic Translation)
 change-image=Spremeni sliko (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Spremembe izkušenj se uporabljajo takoj. (Automatic Translation)
+comments-enabled=Komentarji so omogočeni (Automatic Translation)
+comments-enabled-description=To nastavite na TRUE, da omogočite komentarje med izdajo strani z vsebinami. (Automatic Translation)
 container=Posodo (Automatic Translation)
-content-page-editor-comments-configuration-name=Komentarji strani urejevalnika vsebine (Automatic Translation)
+content-page-editor-configuration-name=Urejevalnik strani z vsebinami (Automatic Translation)
 content-type=Vrste vsebine (Automatic Translation)
 delete-experience=Izbriši izkušnjo (Automatic Translation)
 deprioritize-experience=Deprioritize izkušnje (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=Prednost izkušnje (Automatic Translation)
 publish-page=Objaviti stran (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Zmanjšanje števila stolpcev izgubili vsebino dodati izbrisane stolpce. Ali ste prepričani, da želite nadaljevati? (Automatic Translation)
 remove-background=Odstrani ozadje (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Ponovno odpre (Automatic Translation)
 restore-values=Obnovi vrednosti (Automatic Translation)
 saved=Shranjene (Automatic Translation)
 saving-changes=Zimski... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=Izberite sliko (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Izberite vir vsebine za to predlogo strani za prikaz. (Automatic Translation)
 self=Samo (Automatic Translation)
 show-editable-areas=Pokaži Editable območja (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Pokaži razrešene Komentarje (Automatic Translation)
 space-between-columns=Presledek med stolpci (Automatic Translation)
 specific-content=Posebna vsebina (Automatic Translation)
 text-alignment=Poravnava besedila (Automatic Translation)
