--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
@@ -11,8 +11,10 @@ browse-all=Tümüne göz at (Automatic Translation)
 change-image=Görüntüyü Değiştir (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Deneyimlere yapılan değişiklikler hemen uygulanır. (Automatic Translation)
+comments-enabled=Yorumlar Etkin (Automatic Translation)
+comments-enabled-description=İçerik sayfası sürümü sırasında yorumları etkinleştirmek için bunu gerçek olarak ayarlayın. (Automatic Translation)
 container=Konteyner (Automatic Translation)
-content-page-editor-comments-configuration-name=İçerik sayfası düzenleyici açıklamaları (Automatic Translation)
+content-page-editor-configuration-name=İçerik Sayfası Düzenleyicisi (Automatic Translation)
 content-type=İçerik türü (Automatic Translation)
 delete-experience=Deneyimi Sil (Automatic Translation)
 deprioritize-experience=Tecrübeye öncelik ver (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=Tecrübe önceliğini belirleme (Automatic Translation)
 publish-page=Yayımla sayfası (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Sütun sayısını azaltmak için Silinen sütunlar eklenen içeriği kaybedeceksiniz. Devam etmek istediğinizden emin misiniz? (Automatic Translation)
 remove-background=Arka planı kaldır (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Yeni -den açtığı (Automatic Translation)
 restore-values=Geri yükleme değerleri (Automatic Translation)
 saved=Kaydedilen (Automatic Translation)
 saving-changes=Değişiklikleri kaydediliyor... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=Resim seçin (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Bu ekran sayfası şablonunun içerik kaynağını seçin. (Automatic Translation)
 self=Öz (Automatic Translation)
 show-editable-areas=Düzenlenebilir alanları göster: (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Çözümlenmiş Yorumları Göster (Automatic Translation)
 space-between-columns=Sütunlar arasındaki boşluk (Automatic Translation)
 specific-content=Spesifik Içerik (Automatic Translation)
 text-alignment=Metin hizalama (Automatic Translation)
