--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
@@ -11,8 +11,10 @@ browse-all=Переглянути всі (Automatic Translation)
 change-image=Змінити зображення (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Зміни, внесені до досвіду, застосовуються негайно. (Automatic Translation)
+comments-enabled=Коментарів увімкнено (Automatic Translation)
+comments-enabled-description=Встановіть значення TRUE, щоб увімкнути коментарі під час випуску сторінки вмісту. (Automatic Translation)
 container=Контейнер (Automatic Translation)
-content-page-editor-comments-configuration-name=Зміст сторінці редактора коментарів (Automatic Translation)
+content-page-editor-configuration-name=Редактор сторінок вмісту (Automatic Translation)
 content-type=Тип вмісту (Automatic Translation)
 delete-experience=Видалити досвід (Automatic Translation)
 deprioritize-experience=Deprioritize досвід (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=Досвід пріоритезації (Automatic Transla
 publish-page=Опублікувати сторінку (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Зменшення кількості стовпців втратить зміст, додані до видалені стовпці. Справді продовжити? (Automatic Translation)
 remove-background=Видалити фон (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Відкрити (Automatic Translation)
 restore-values=Відновити значення (Automatic Translation)
 saved=Збережені (Automatic Translation)
 saving-changes=Збереження змін... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=Виберіть зображення (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Виберіть Джерело вмісту для цього шаблона відображення. (Automatic Translation)
 self=Самоврядування (Automatic Translation)
 show-editable-areas=Показати редагованими областями (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Показати вирішені коментарі (Automatic Translation)
 space-between-columns=Інтервал між колонками (Automatic Translation)
 specific-content=Конкретний вміст (Automatic Translation)
 text-alignment=Вирівнювання тексту (Automatic Translation)
