--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
@@ -11,8 +11,10 @@ browse-all=Duyệt tất cả (Automatic Translation)
 change-image=Thay đổi hình ảnh (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Thay đổi kinh nghiệm được áp dụng ngay lập tức. (Automatic Translation)
+comments-enabled=Bình luận đã bật (Automatic Translation)
+comments-enabled-description=Đặt điều này thành True để bật nhận xét trong phiên bản trang nội dung. (Automatic Translation)
 container=Container (Automatic Translation)
-content-page-editor-comments-configuration-name=Nội dung trang Editor Comment (Automatic Translation)
+content-page-editor-configuration-name=Trình chỉnh sửa trang nội dung (Automatic Translation)
 content-type=Loại nội dung (Automatic Translation)
 delete-experience=Xóa trải nghiệm (Automatic Translation)
 deprioritize-experience=Kinh nghiệm deưu tiên (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=Kinh nghiệm ưu tiên (Automatic Translation)
 publish-page=Xuất bản trang (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Việc giảm số lượng các cột sẽ mất nội dung được thêm vào để xóa cột. Bạn có chắc bạn muốn tiếp tục không? (Automatic Translation)
 remove-background=Loại bỏ nền (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Mở lại (Automatic Translation)
 restore-values=Khôi phục giá trị (Automatic Translation)
 saved=Lưu (Automatic Translation)
 saving-changes=Lưu thay đổi... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=Chọn hình ảnh (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Chọn nguồn nội dung cho mẫu trang hiển thị này. (Automatic Translation)
 self=Tự (Automatic Translation)
 show-editable-areas=Hiển thị các khu vực có thể chỉnh sửa (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Hiện ý kiến giải quyết (Automatic Translation)
 space-between-columns=Không gian giữa các cột (Automatic Translation)
 specific-content=Nội dung cụ thể (Automatic Translation)
 text-alignment=Căn chỉnh văn bản (Automatic Translation)
