--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
@@ -11,8 +11,10 @@ browse-all=浏览全部
 change-image=更改图像 (Automatic Translation)
 changes-saved-at-x=更改已保存在 {0}。
 changes-to-experiences-are-applied-immediately=将立即应用对体验的变更。
+comments-enabled=已启用注释 (Automatic Translation)
+comments-enabled-description=将此选项设置为 true 以在内容页面版本期间启用注释。 (Automatic Translation)
 container=容器
-content-page-editor-comments-configuration-name=内容页编辑器备注
+content-page-editor-configuration-name=内容页面编辑器 (Automatic Translation)
 content-type=内容类型
 delete-experience=删除体验
 deprioritize-experience=取消优先处理体验
@@ -55,7 +57,7 @@ prioritize-experience=优先处理体验
 publish-page=发布页面
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=减少列数将丢失添加到已删除列的内容。您确定要继续吗？
 remove-background=移除背景
-reopen=Reopen (Automatic Copy)
+reopen=重新 (Automatic Translation)
 restore-values=还原值
 saved=已保存
 saving-changes=正在保存更改…
@@ -70,7 +72,7 @@ select-image=选择图像
 select-the-content-source-for-this-display-page-template=选择此显示页面模板的内容源。
 self=自身
 show-editable-areas=显示可编辑区域
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=显示已解决的注释 (Automatic Translation)
 space-between-columns=列之间的间距
 specific-content=特定内容
 text-alignment=文本对齐
