--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
@@ -11,8 +11,10 @@ browse-all=Explora-ho tot
 change-image=Canviar imatge (Automatic Translation)
 changes-saved-at-x=Canvis desats a {0}.
 changes-to-experiences-are-applied-immediately=Els canvis fets a les experiències s'apliquen immediatament.
+comments-enabled=Comentaris habilitats (Automatic Translation)
+comments-enabled-description=Establiu-ho a True per habilitar els comentaris durant l'edició de la pàgina de contingut. (Automatic Translation)
 container=Contenidor
-content-page-editor-comments-configuration-name=Comentaris de l'editor de la pàgina de continguts
+content-page-editor-configuration-name=Editor de pàgines de contingut (Automatic Translation)
 content-type=Tipus de contingut
 delete-experience=Suprimeix l'experiència
 deprioritize-experience=Anul·la la prioritat de l'experiència
@@ -55,7 +57,7 @@ prioritize-experience=Prioritza l'experiència
 publish-page=Publica la pàgina
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Reduir el nombre de columnes farà que es perdi el contingut afegit a les columnes suprimides. Segur que voleu continuar?
 remove-background=Treu el fons
-reopen=Reopen (Automatic Copy)
+reopen=Reobrir (Automatic Translation)
 restore-values=Restaura els valors
 saved=Modificat
 saving-changes=S'estan desant els canvis...
@@ -70,7 +72,7 @@ select-image=Seleccioneu la imatge
 select-the-content-source-for-this-display-page-template=Seleccioneu la font del contingut de la plantilla d'aquesta pàgina de visualització.
 self=Jo
 show-editable-areas=Mostra les àrees editables
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Mostra els comentaris resolts (Automatic Translation)
 space-between-columns=Espai entre columnes
 specific-content=Contingut específic
 text-alignment=Alineació del text
