--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
@@ -10,9 +10,11 @@ background-image=تصویر پس زمینه (Automatic Translation)
 browse-all=مرور همه (Automatic Translation)
 change-image=تغییر تصویر (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
-changes-to-experiences-are-applied-immediately=تغییرات به تجربیات بلافاصله اعمال می شود. (Automatic Translation)
+changes-to-experiences-are-applied-immediately=تغییرات در تجربه ها بلافاصله اعمال می شود. (Automatic Translation)
+comments-enabled=نظرات فعال است (Automatic Translation)
+comments-enabled-description=تنظیم این به true برای فعال کردن نظرات در طول صفحه محتوا نسخه. (Automatic Translation)
 container=کانتینر
-content-page-editor-comments-configuration-name=صفحه محتوای ویرایشگر نظرات (Automatic Translation)
+content-page-editor-configuration-name=ویرایشگر صفحه محتوا (Automatic Translation)
 content-type=نوع محتوا (Automatic Translation)
 delete-experience=حذف تجربه (Automatic Translation)
 deprioritize-experience=تجربه Deprioritize (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=اولویت بندی تجربه (Automatic Translation)
 publish-page=صفحه را منتشر (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=کاهش تعداد ستون مطالب اضافه شده به ستون های حذف شده از دست خواهد داد. آیا می خواهید ادامه دهید؟ (Automatic Translation)
 remove-background=حذف پس زمینه (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=بازگشایی (Automatic Translation)
 restore-values=برگرداندن مقادیر (Automatic Translation)
 saved=ذخیره شده
 saving-changes=ذخیره تغییرات... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=انتخاب تصویر (Automatic Translation)
 select-the-content-source-for-this-display-page-template=منبع محتوای این الگو صفحه نمایش را انتخاب کنید. (Automatic Translation)
 self=خود
 show-editable-areas=نمایش مناطق قابل ویرایش (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=نمایش نظرات حل و فصل (Automatic Translation)
 space-between-columns=فاصله بین ستونها (Automatic Translation)
 specific-content=محتوای خاص (Automatic Translation)
 text-alignment=ترازبندی متن (Automatic Translation)
