--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
@@ -11,8 +11,10 @@ browse-all=Tout parcourir
 change-image=Changer l'image (Automatic Translation)
 changes-saved-at-x=Modifications enregistrées dans {0}.
 changes-to-experiences-are-applied-immediately=Les modifications apportées aux expériences sont appliquées immédiatement.
+comments-enabled=Commentaires activés (Automatic Translation)
+comments-enabled-description=Définir cela à vrai pour activer les commentaires pendant l'édition de la page de contenu. (Automatic Translation)
 container=Conteneur
-content-page-editor-comments-configuration-name=Commentaires de l'éditeur de page de contenu
+content-page-editor-configuration-name=Éditeur de page de contenu (Automatic Translation)
 content-type=Type de contenu
 delete-experience=Supprimer l'expérience
 deprioritize-experience=Supprimer la priorité de l'expérience
@@ -55,7 +57,7 @@ prioritize-experience=Donner la priorité à l'expérience
 publish-page=Publier la page
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Si vous réduisez le nombre de colonnes, vous perdrez le contenu ajouté aux colonnes supprimées. Voulez-vous continuer ?
 remove-background=Supprimer le fond
-reopen=Reopen (Automatic Copy)
+reopen=rouvrir (Automatic Translation)
 restore-values=Restaurer les valeurs
 saved=Sauvegarder
 saving-changes=Enregistrement des modifications...
@@ -70,7 +72,7 @@ select-image=Sélectionner l'image
 select-the-content-source-for-this-display-page-template=Sélectionnez la source de contenu pour ce modèle de page d'affichage.
 self=Soi
 show-editable-areas=Afficher les Zones Modifiables
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Afficher les commentaires résolus (Automatic Translation)
 space-between-columns=Espace entre les colonnes
 specific-content=Contenu spécifique
 text-alignment=Alignement du texte
