--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
@@ -11,8 +11,10 @@ browse-all=Jelajahi semua (Automatic Translation)
 change-image=Ubah gambar (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Perubahan pengalaman segera diterapkan. (Automatic Translation)
+comments-enabled=Komentar diaktifkan (Automatic Translation)
+comments-enabled-description=Setel ini ke true untuk mengaktifkan komentar selama edisi halaman konten. (Automatic Translation)
 container=Kontainer (Automatic Translation)
-content-page-editor-comments-configuration-name=Konten halaman editor komentar (Automatic Translation)
+content-page-editor-configuration-name=Editor halaman konten (Automatic Translation)
 content-type=Jenis konten (Automatic Translation)
 delete-experience=Hapus pengalaman (Automatic Translation)
 deprioritize-experience=Deprioritaskan pengalaman (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=Prioritaskan pengalaman (Automatic Translation)
 publish-page=Mempublikasikan Halaman (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Mengurangi jumlah kolom akan kehilangan konten yang ditambahkan ke kolom dihapus. Apakah Anda yakin Anda ingin melanjutkan? (Automatic Translation)
 remove-background=Hapus background (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Membuka kembali (Automatic Translation)
 restore-values=Pulihkan nilai (Automatic Translation)
 saved=Disimpan (Automatic Translation)
 saving-changes=Menyimpan perubahan... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=Pilih gambar (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Pilih sumber konten untuk template halaman tampilan ini. (Automatic Translation)
 self=Diri (Automatic Translation)
 show-editable-areas=Daerah dapat diedit Tampilkan (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Tampilkan terselesaikan komentar (Automatic Translation)
 space-between-columns=Ruang antara kolom (Automatic Translation)
 specific-content=Konten khusus (Automatic Translation)
 text-alignment=Perataan teks (Automatic Translation)
