--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
@@ -11,8 +11,10 @@ browse-all=Sfoglia tutto (Automatic Translation)
 change-image=Cambia immagine (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Le modifiche alle esperienze vengono applicate immediatamente. (Automatic Translation)
+comments-enabled=Commenti abilitati (Automatic Translation)
+comments-enabled-description=Impostare questa opzione su true per abilitare i commenti durante l'edizione della pagina di contenuto. (Automatic Translation)
 container=Contenitore (Automatic Translation)
-content-page-editor-comments-configuration-name=Commenti dell'editor di pagine di contenuto (Automatic Translation)
+content-page-editor-configuration-name=Editor pagine di contenuto (Automatic Translation)
 content-type=Tipo di contenuto (Automatic Translation)
 delete-experience=Cancella esperienza (Automatic Translation)
 deprioritize-experience=Deprioritizza l'esperienza (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=Dare priorità all'esperienza (Automatic Translation)
 publish-page=Pubblicare la pagina (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Riducendo il numero di colonne perderà il contenuto aggiunto a colonne eliminate. Sei sicuro di che voler procedere? (Automatic Translation)
 remove-background=Rimuovi sfondo (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=riaprirsi (Automatic Translation)
 restore-values=Ripristina valori (Automatic Translation)
 saved=Salvato (Automatic Translation)
 saving-changes=Salvare le modifiche... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=Selezionare immagine (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Selezionare l'origine del contenuto per questo modello di pagina di visualizzazione. (Automatic Translation)
 self=stesso (Automatic Translation)
 show-editable-areas=Visualizza aree modificabili (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Mostra commenti risolti (Automatic Translation)
 space-between-columns=Spazio tra le colonne (Automatic Translation)
 specific-content=Contenuto specifico (Automatic Translation)
 text-alignment=Allineamento del testo (Automatic Translation)
