--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
@@ -11,8 +11,10 @@ browse-all=דפדף הכל (Automatic Translation)
 change-image=שינוי תמונה (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=שינויים בחוויות מוחלים באופן מיידי. (Automatic Translation)
+comments-enabled=הערות מאופשרות (Automatic Translation)
+comments-enabled-description=הגדר זאת כ-true כדי לאפשר הערות במהלך מהדורת דף התוכן. (Automatic Translation)
 container=מיכל (Automatic Translation)
-content-page-editor-comments-configuration-name=הערות של עורך דפי תוכן (Automatic Translation)
+content-page-editor-configuration-name=עורך דפי תוכן (Automatic Translation)
 content-type=סוג תוכן (Automatic Translation)
 delete-experience=מחיקת ניסיון (Automatic Translation)
 deprioritize-experience=ביטול עדיפות ניסיון (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=מתן עדיפות לניסיון (Automatic Translation)
 publish-page=פרסום דף (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=הפחתת מספר העמודות, תאבד את התוכן שנוסף לעמודות שנמחקו. האם אתה בטוח שברצונך להמשיך? (Automatic Translation)
 remove-background=הסר רקע (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=פתוח (Automatic Translation)
 restore-values=שחזור ערכים (Automatic Translation)
 saved=הציל (Automatic Translation)
 saving-changes=שמירת שינויים... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=בחר את התמונה (Automatic Translation)
 select-the-content-source-for-this-display-page-template=בחר את מקור התוכן עבור תבנית דף תצוגה זו. (Automatic Translation)
 self=האני (Automatic Translation)
 show-editable-areas=מראים אזורים ניתנים לעריכה (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=הצג הערות שנפתרו (Automatic Translation)
 space-between-columns=מרווח בין עמודות (Automatic Translation)
 specific-content=תוכן ספציפי (Automatic Translation)
 text-alignment=יישור טקסט (Automatic Translation)
