--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ko.properties
@@ -10,9 +10,11 @@ background-image=배경 이미지 (Automatic Translation)
 browse-all=모두 찾아보기 (Automatic Translation)
 change-image=이미지 변경 (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
-changes-to-experiences-are-applied-immediately=경험에 대 한 변경 사항은 즉시 적용 됩니다. (Automatic Translation)
+changes-to-experiences-are-applied-immediately=경험에 대한 변경 사항은 즉시 적용됩니다. (Automatic Translation)
+comments-enabled=주석 사용 가능 (Automatic Translation)
+comments-enabled-description=콘텐츠 페이지 에디션 중에 주석을 사용하도록 설정합니다. (Automatic Translation)
 container=컨테이너 (Automatic Translation)
-content-page-editor-comments-configuration-name=콘텐츠 페이지 편집자 댓글 (Automatic Translation)
+content-page-editor-configuration-name=콘텐츠 페이지 편집기 (Automatic Translation)
 content-type=콘텐츠 형식 (Automatic Translation)
 delete-experience=환경 삭제 (Automatic Translation)
 deprioritize-experience=환경 우선 순위 지정 (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=경험 우선 순위 지정 (Automatic Translation)
 publish-page=페이지 게시 (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=열 수를 줄이면 삭제 된 열을 추가 하는 콘텐츠를 손실 됩니다. 당신은 계속 하 시겠습니까? (Automatic Translation)
 remove-background=배경 제거 (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=다시 (Automatic Translation)
 restore-values=값 복원 (Automatic Translation)
 saved=저장 (Automatic Translation)
 saving-changes=변경 내용을 저장... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=이미지 선택 (Automatic Translation)
 select-the-content-source-for-this-display-page-template=이 표시 페이지 템플릿에 대 한 콘텐츠 원본을 선택 합니다. (Automatic Translation)
 self=자기 (Automatic Translation)
 show-editable-areas=편집 가능한 영역을 표시 (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=해결된 주석 표시 (Automatic Translation)
 space-between-columns=열 사이의 간격 (Automatic Translation)
 specific-content=특정 콘텐츠 (Automatic Translation)
 text-alignment=텍스트 맞춤 (Automatic Translation)
