--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
@@ -11,8 +11,10 @@ browse-all=Bla gjennom alle (Automatic Translation)
 change-image=Endre bilde (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=Endringer i opplevelser brukes umiddelbart. (Automatic Translation)
+comments-enabled=Kommentarer aktivert (Automatic Translation)
+comments-enabled-description=Sett denne til sann for å aktivere kommentarer under utgaven av innholdssiden. (Automatic Translation)
 container=Beholder (Automatic Translation)
-content-page-editor-comments-configuration-name=Kommentarer til innholdsside redigering (Automatic Translation)
+content-page-editor-configuration-name=Redigering av innholdssider (Automatic Translation)
 content-type=Innholdstype (Automatic Translation)
 delete-experience=Slett opplevelse (Automatic Translation)
 deprioritize-experience=Deprioritize erfaring (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=Prioriter opplevelse (Automatic Translation)
 publish-page=Publiser side (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Redusere antall kolonner vil miste innholdet lagt til de slettede kolonnene. Er du sikker på at du vil fortsette? (Automatic Translation)
 remove-background=Fjern bakgrunn (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=Åpne (Automatic Translation)
 restore-values=Gjenopprett verdier (Automatic Translation)
 saved=Lagret (Automatic Translation)
 saving-changes=Lagrer endringer... (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=Velg bilde (Automatic Translation)
 select-the-content-source-for-this-display-page-template=Velg innholdskilden for denne visningsside malen. (Automatic Translation)
 self=Selv (Automatic Translation)
 show-editable-areas=Vis redigerbare områder (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=Vis løste kommentarer (Automatic Translation)
 space-between-columns=Avstanden mellom kolonnene (Automatic Translation)
 specific-content=Spesifikt innhold (Automatic Translation)
 text-alignment=Tekstjustering (Automatic Translation)
