--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_TW.properties
@@ -11,8 +11,10 @@ browse-all=流覽全部 (Automatic Translation)
 change-image=更改圖像 (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 changes-to-experiences-are-applied-immediately=對體驗的更改將立即應用。 (Automatic Translation)
+comments-enabled=已啟用注釋 (Automatic Translation)
+comments-enabled-description=將此選項設置為 true 以在內容頁面版本期間啟用注釋。 (Automatic Translation)
 container=容器 (Automatic Translation)
-content-page-editor-comments-configuration-name=內容頁編輯器注釋 (Automatic Translation)
+content-page-editor-configuration-name=內容頁面編輯器 (Automatic Translation)
 content-type=內容類型 (Automatic Translation)
 delete-experience=刪除體驗 (Automatic Translation)
 deprioritize-experience=降低體驗的能力 (Automatic Translation)
@@ -55,7 +57,7 @@ prioritize-experience=優先考慮體驗 (Automatic Translation)
 publish-page="發佈" 頁 (Automatic Translation)
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=減少列數將丟失添加到已刪除列的內容。確實要繼續嗎？ (Automatic Translation)
 remove-background=移除背景 (Automatic Translation)
-reopen=Reopen (Automatic Copy)
+reopen=重新 (Automatic Translation)
 restore-values=還原值 (Automatic Translation)
 saved=保存 (Automatic Translation)
 saving-changes=正在保存更改..。 (Automatic Translation)
@@ -70,7 +72,7 @@ select-image=選擇圖像 (Automatic Translation)
 select-the-content-source-for-this-display-page-template=選擇此顯示頁範本的內容源。 (Automatic Translation)
 self=自我 (Automatic Translation)
 show-editable-areas=顯示可編輯區域 (Automatic Translation)
-show-resolved-comments=Show Resolved Comments (Automatic Copy)
+show-resolved-comments=顯示已解決的注釋 (Automatic Translation)
 space-between-columns=列之間的空間 (Automatic Translation)
 specific-content=特定內容 (Automatic Translation)
 text-alignment=文本對齊 (Automatic Translation)
